force-app/main/default/objects/FeeModel__c/FeeModel__c.object-meta.xml
<CustomObject>
    <description>Establishes what fields should be displayed for which fees</description>
    <label>Fee model</label>
    <nameField>
        <label>Fee model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>