force-app/main/default/objects/FeeModel__c/fields/DefaultAmount__c.field-meta.xml
<CustomField>
    <fullName>DefaultAmount__c</fullName>
    <description>The default value for this fee - either as a percentage of fixed fee</description>
    <label>Default amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>