force-app/main/default/objects/FeeModel__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A description of this fee model visible to users</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>