force-app/main/default/objects/FeeModel__c/fields/Discountable__c.field-meta.xml
<CustomField>
    <fullName>Discountable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this fee can be discounted</description>
    <label>Discountable</label>
    <type>Checkbox</type>
</CustomField>