force-app/main/default/objects/FeeModel__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>This indicates the term of the fee</description>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-off</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>