force-app/main/default/objects/FeeModel__c/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <description>The minimum value that this fee must have</description>
    <label>Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>