force-app/main/default/objects/FeeModel__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The kind of product that this fee model is related tp</description>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Fee models</relationshipLabel>
    <relationshipName>Fee_models</relationshipName>
    <type>Lookup</type>
</CustomField>