force-app/main/default/objects/FeeModel__c/fields/ProductRecordType__c.field-meta.xml
<CustomField>
    <fullName>ProductRecordType__c</fullName>
    <description>The record type of pre-CheerIO products that this fee model relates to. Can be removed when we no longer use old financial products</description>
    <label>Product record type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>