force-app/main/default/objects/FeeModel__c/fields/RecommendationType__c.field-meta.xml
<CustomField>
    <fullName>RecommendationType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The recommendation type that this fee model is related to</description>
    <label>Recommendation Type</label>
    <referenceTo>RecommendationType__c</referenceTo>
    <relationshipLabel>Fee models</relationshipLabel>
    <relationshipName>Fee_models</relationshipName>
    <type>Lookup</type>
</CustomField>