force-app/main/default/objects/FeeModel__c/fields/RevenueDueTo__c.field-meta.xml
<CustomField>
    <fullName>RevenueDueTo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Indicates who receives any revenue generated from these fees</description>
    <label>Revenue due to</label>
    <referenceTo>Public_Provider_Names__c</referenceTo>
    <relationshipLabel>Fee models</relationshipLabel>
    <relationshipName>Fee_models</relationshipName>
    <type>Lookup</type>
</CustomField>